infra/k3s/base/trainer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trainer
  namespace: alphapulse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trainer
  template:
    metadata:
      labels:
        app: trainer
    spec:
      containers:
      - name: trainer
        image: k3d-alphapulse-registry:5001/trainer:v1-prod
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: trainer
  namespace: alphapulse
spec:
  selector:
    app: trainer
  ports:
  - port: 80
    targetPort: 8080
